# yProv-CLI

./: README.md  pyproject.toml
yprov_cli/: __main__.py  main.py
yprov_cli/routes/: activities.py  agents.py  auth.py  documents.py  elements.py  entities.py  relations.py
yprov_cli/routes/utils/: utils.py
