[tool.poetry]
name = "yprov-cli"
version = "1.0.0"
authors = ["HPCI-Lab"]
description = "CLI for yProv service"
readme = "README.md"
packages = [{include = "yprov_cli"}]

[tool.poetry.scripts]
yprov-cli = "yprov_cli.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
